stop calculating height for pages, instead using flex box; other adjustments to get rid of overflow body/html

--- a/src/main/vue/src/assets/css/base/reset.css
+++ b/src/main/vue/src/assets/css/base/reset.css
@@ -1,4 +1,6 @@
 html {
+  margin: 0;
+  padding: 0;
   overscroll-behavior: auto;
   overflow: auto;
   height: 100%;
